--- a/Codigo/css/juego/CarCollisionGame/carCollissionGame_MADE_BY_CRMC.css
+++ b/Codigo/css/juego/CarCollisionGame/carCollissionGame_MADE_BY_CRMC.css
@@ -15,7 +15,7 @@ body {
     background-image: linear-gradient(45deg, #EFBC9B 50%, #D6DAC8 50%);
     background-color: beige;
     min-height: 50rem;
-    cursor: url(./../../../img/juego/carCollissionGame/cursors/cars-lightning-mcqueen-custom-cursor.webp), default!important;
+    cursor: url(./../../../img/juego/carCollissionGame/cursors/cars-lightning-mcqueen-custom-cursor.webp), default;
 }
 
 .videojuego {
@@ -77,7 +77,7 @@ body {
     border-radius: 1.25rem;
     font-size: 1.56rem;
     color: whitesmoke;
-    cursor: url(./../../../img/juego/carCollissionGame/cursors/cars-lightning-mcqueen-cursor-32x32.png), pointer!important;
+    cursor: url(./../../../img/juego/carCollissionGame/cursors/cars-lightning-mcqueen-cursor-32x32.png), pointer;
 }
 
 .resultadoWin{
